# yaml_tkinter

./: README  README.md  example.py  example.yaml  pyproject.toml  title_frame.yaml  yamltk.py
example/: example.py  item.yaml  root.yaml  title_frame.yaml
src/example/: example.py  item.yaml  root.yaml
src/yamltk/: __init__.py  yamltk.py
